# jamey-code

./: .env.local.example  .env.template  .gitignore  AUDIT_REPORT.md  Cargo.toml  DATABASE_SETUP.md  README.md  TESTING_STRATEGY.md  install.sh  setup-db.ps1
.cursorrules/: Digital_Twin_Jamey.md  cursor-rules.json
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: development.env  production.env  windows.env
docs/: DOCUMENTATION_REORGANIZATION_SUMMARY.md  README.md
docs/adr/: 001-cache-invalidation-strategies.md  README.md
docs/ai-agent/: README.md  admin-assistant.md  always-on.md  full-system-access.md  iot-devices.md  network-access.md  orchestration.md  security-best-practices.md  self-improvement.md
docs/architecture/: README.md  cache-invalidation.md  configuration.md  improvements-summary.md  pagination.md  system-overview.md
docs/getting-started/: README.md  database-setup.md
docs/operations/: README.md  performance-monitoring.md
docs/reference/: audit-report.md  digital-twin-notes.md
docs/security/: README.md  log-security.md  tls-configuration.md
docs/security/ta-qr/: README.md  architecture.md  implementation-spec.md  usage-guide.md
docs/testing/: README.md  best-practices.md  strategy.md
jamey-cli/: Cargo.toml
jamey-cli/src/: config.rs  main.rs  utils.rs
jamey-cli/src/commands/: chat.rs  init.rs  memory.rs  mod.rs  process.rs  start.rs  status.rs  stop.rs  system.rs
jamey-cli/tests/: cli_tests.rs
jamey-core/: Cargo.toml
jamey-core/benches/: benchmarks.rs  criterion_benchmarks.rs
jamey-core/src/: cache.rs  cached_memory.rs  lib.rs  memory.rs  pool.rs  profiling.rs  secrets.rs  secure_logging.rs
jamey-core/tests/: cached_memory_tests.rs  config_prop_tests.rs  load_tests.rs  memory_tests.rs  memory_unit_tests.rs  pool_tests.rs  property_tests.rs  regression_tests.rs  runtime_config_prop_tests.rs  secrets_unit_tests.rs
jamey-core/tests/fixtures/: mod.rs
jamey-core/tests/helpers/: mod.rs
jamey-core/tests/mocks/: mod.rs
jamey-core/tests/utils/: mod.rs
jamey-protocol/: Cargo.toml
jamey-protocol/src/: lib.rs
jamey-providers/: Cargo.toml
jamey-providers/src/: lib.rs  openrouter.rs
jamey-providers/tests/: openrouter_unit_tests.rs
jamey-runtime/: Cargo.toml
jamey-runtime/src/: config.rs  hybrid_orchestrator.rs  lib.rs  scheduler.rs  service.rs  state.rs  tls.rs
jamey-tools/: Cargo.toml
jamey-tools/src/: connector.rs  lib.rs  system.rs
jamey-tools/src/connectors/: agent_orchestration.rs  full_system.rs  github.rs  iot.rs  linkedin.rs  mcp.rs  mod.rs  network_web.rs  self_improve.rs  system_admin.rs
jamey-tools/tests/: security_tests.rs
jamey-tui/: Cargo.toml
jamey-tui/src/: app.rs  main.rs  ui.rs
jamey-tui/tests/: tui_tests.rs
tests/: component_integration_tests.rs  database_tests.rs  external_service_tests.rs  full_workflow_integration_tests.rs  integration_test.rs  tool_integration_tests.rs  workflow_tests.rs
