[workspace]
members = [
    "jamey-core",
    "jamey-providers",
    "jamey-tools",
    "jamey-runtime"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "Digital Twin Jamey - An AI assistant with system capabilities"

[workspace.dependencies]
# Database
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = "0.10"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenv = "0.15"
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Windows-specific
[target.'cfg(windows)'.workspace.dependencies]
windows = { version = "0.48", features = ["Win32_System_Registry"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1