[workspace]
members = [
    "jamey-core",
    "jamey-protocol",
    "jamey-providers",
    "jamey-tools",
    "jamey-runtime",
    "jamey-cli",
    "jamey-tui"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "Digital Twin Jamey - An AI assistant with system capabilities"

[workspace.dependencies]
# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive"] }
deadpool-postgres = "0.10"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time/Date handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenv = "0.15"
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI Dependencies
clap = { version = "4.0", features = ["derive", "env"] }
colored = "2.0"
crossterm = { version = "0.27", features = ["event-stream"] }
dialoguer = "0.11"
indicatif = "0.17"
dirs = "5.0"

# TUI Dependencies
ratatui = { version = "0.23", features = ["all-widgets"] }
tui-textarea = "0.2"
arboard = "3.2"

# Caching Dependencies
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"
tokio-util = "0.7"

# Windows-specific
windows = { version = "0.48", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]}

# Windows-specific dependencies should be defined in individual crates
# that need them, not at workspace level

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1