[package]
name = "jamey-core"
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "Core functionality for Digital Twin Jamey"

[dependencies]
# Workspace dependencies
tokio-postgres.workspace = true
postgres-types.workspace = true
deadpool-postgres.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
log.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
regex = "1.10"

# Crate-specific dependencies
pgvector = "0.4"  # PostgreSQL vector operations
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"
keyring = "2.0"  # Secure OS keychain integration
validator = { version = "0.20.0", features = ["derive"] }
subtle = "2.6.1"
rand = "0.9.2"
sha2 = "0.10.9"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
proptest = "1.3"
criterion.workspace = true

[[bench]]
name = "criterion_benchmarks"
harness = false
