[package]
name = "jamey-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "Protocol definitions for Digital Twin Jamey"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Crate-specific dependencies
async-trait = "0.1"
thiserror = "1.0"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
