[package]
name = "jamey-providers"
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "LLM providers implementation for Digital Twin Jamey"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true

# Local dependencies
jamey-core = { path = "../jamey-core" }

# Crate-specific dependencies
async-trait = "0.1"
tiktoken-rs = "0.5"  # For token counting
futures = "0.3"
backoff = { version = "0.4", features = ["tokio"] }  # For retry logic
url = "2.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
wiremock = "0.5"  # For mocking HTTP responses in tests