[package]
name = "jamey-tools"
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "System tools implementation for Digital Twin Jamey"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Local dependencies
jamey-core = { path = "../jamey-core" }

# Cross-platform process management
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
glob = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]}

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.8"  # For temporary file operations in tests