[package]
name = "jamey-tools"
version = "0.1.0"
edition = "2021"
authors = ["Jamey Milner"]
description = "System tools implementation for Digital Twin Jamey"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Local dependencies
jamey-core = { path = "../jamey-core" }

# Cross-platform process management
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
async-trait.workspace = true
glob = "0.3"

# Network and web
reqwest.workspace = true
urlencoding.workspace = true
base64.workspace = true
url = "2.5"

# MQTT for IoT device communication
rumqttc = "0.21"

# mDNS for device discovery
mdns-sd = "0.6"

# TLS support for mTLS in MQTT
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
tokio-rustls.workspace = true

# UUID for connector IDs
uuid.workspace = true

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
tempfile = "3.8"  # For temporary file operations in tests